--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -1,5 +1,10 @@
 {
-  "Язык" : "Русский",
-  "Главная" : "Главная",
-  "О сайте" : "О сайте"
+  "lang": "Русский",
+  "main": "Главная",
+  "page not found": "Страница не найдена",
+  "translate": "Перевод",
+  "about": "О сайте",
+  "unpredictable error": "Произошла непредвиденная ошибка",
+  "throw": "Бросить ошибку",
+  "update": "Обновить страницу"
 }
