upgrade sidebar, add button themes

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -6,5 +6,6 @@
   "about": "About",
   "unpredictable error": "Unpredictable error",
   "throw": "Throw error",
-  "update": "Update page"
+  "update": "Update page",
+  "langShort": "En"
 }
