--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -6,5 +6,6 @@
   "about": "О сайте",
   "unpredictable error": "Произошла непредвиденная ошибка",
   "throw": "Бросить ошибку",
-  "update": "Обновить страницу"
+  "update": "Обновить страницу",
+  "langShort": "Ru"
 }
